project(tests)

cmake_minimum_required(VERSION 3.21.2)

set(CMAKE_SYSTEM_NAME Windows)

set(CMAKE_CXX_STANDART 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})

set(
    SRC_FILES

    main.cpp
)

set(
    THREAD_POOL_LIB

    thread_pool
)

add_executable(${PROJECT_NAME} ${SRC_FILES})